# loxscript

./: CMakeLists.txt  README.md
include/: token_type.hpp
src/: main.cpp  token.cpp
